controller tecnico, iniciando tratamento de execeção

--- a/10. Codificação/Model/Model.csproj
+++ b/10. Codificação/Model/Model.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Models\Tecnico.cs" />
     <Compile Include="Models\Triagem.cs" />
     <Compile Include="Models\Usuario.cs" />
+    <Compile Include="Models\UsuarioExterno.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
