--- a/10. Codificação/PortalOdonto/PortalOdonto.csproj
+++ b/10. Codificação/PortalOdonto/PortalOdonto.csproj
@@ -202,8 +202,8 @@
     <Content Include="Views\Administrador\Edit.cshtml" />
     <Content Include="Views\Tecnico\CadastrarPaciente.cshtml" />
     <Content Include="Views\Tecnico\VisualizarPaciente.cshtml" />
-    <Content Include="Views\Tecnico\CadastrarTriagem.cshtml" />
     <Content Include="Views\Tecnico\ListarPacientes.cshtml" />
+    <Content Include="Views\Tecnico\EditarPerfil.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
