--- a/10. Codificação/PortalOdonto/PortalOdonto.csproj
+++ b/10. Codificação/PortalOdonto/PortalOdonto.csproj
@@ -216,6 +216,7 @@
     <Content Include="Views\Aluno\Index.cshtml" />
     <Content Include="Views\Professor\Index.cshtml" />
     <Content Include="Views\Usuario\Cadastrar.cshtml" />
+    <Content Include="Views\Usuario\AlterarSenha.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
