--- a/10. Codificação/PortalOdonto/PortalOdonto.csproj
+++ b/10. Codificação/PortalOdonto/PortalOdonto.csproj
@@ -200,10 +200,10 @@
     <Content Include="Views\Administrador\Create.cshtml" />
     <Content Include="Views\Tecnico\Index.cshtml" />
     <Content Include="Views\Administrador\Edit.cshtml" />
-    <Content Include="Views\Tecnico\CadastrarPaciente.cshtml" />
     <Content Include="Views\Tecnico\VisualizarPaciente.cshtml" />
     <Content Include="Views\Tecnico\ListarPacientes.cshtml" />
     <Content Include="Views\Tecnico\EditarPerfil.cshtml" />
+    <Content Include="Views\Tecnico\CadastrarTriagem.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
