--- a/10. Codificação/Model/Model.csproj
+++ b/10. Codificação/Model/Model.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Models\Professor.cs" />
     <Compile Include="Models\Prontuario.cs" />
     <Compile Include="Models\Tecnico.cs" />
+    <Compile Include="Models\Tipos.cs" />
     <Compile Include="Models\Triagem.cs" />
     <Compile Include="Models\Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
