--- a/10. Codificação/PortalOdonto/PortalOdonto.csproj
+++ b/10. Codificação/PortalOdonto/PortalOdonto.csproj
@@ -221,6 +221,8 @@
     <Content Include="Views\Professor\Index.cshtml" />
     <Content Include="Views\Usuario\Cadastrar.cshtml" />
     <Content Include="Views\Usuario\AlterarSenha.cshtml" />
+    <Content Include="Views\Tecnico\EditarTriagem.cshtml" />
+    <Content Include="Views\Tecnico\EditarPerfil.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
