Mudança com o sonar

--- a/10. Codificação/Model/Model.csproj
+++ b/10. Codificação/Model/Model.csproj
@@ -64,7 +64,22 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Models.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\EDMX\TB_Odontograma.cs">
+      <DependentUpon>Models.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\EDMX\TB_Paciente.cs">
+      <DependentUpon>Models.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\EDMX\TB_Perguntas.cs">
+      <DependentUpon>Models.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\EDMX\TB_Periograma.cs">
+      <DependentUpon>Models.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\EDMX\TB_Pessoa.cs">
+      <DependentUpon>Models.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\EDMX\TB_Triagem.cs">
       <DependentUpon>Models.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Execptions\AplicacaoException.cs" />
@@ -89,7 +104,6 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <Content Include="Models\EDMX\Models.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
